--- a/.github/workflows/apptest.yaml
+++ b/.github/workflows/apptest.yaml
@@ -1,5 +1,3 @@
-# apptest.yaml
-
 on:
   pull_request:
     branches:
@@ -13,10 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up Python 3.8.8
+      - name: Set up Python 3.7
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8.8
+          python-version: 3.7
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -24,3 +22,16 @@ jobs:
       - name: Test
         run: |
           pytest
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: build and release to DockerHub
+        env:  # 환경변수로 값을 지정하여 사용할 수 있습니다.
+          REPO: pbc6835
+          LAYER_NAME: docker-flask-todo
+        run: |
+          docker build -t $LAYER_NAME  .
+          docker tag $LAYER_NAME:latest $REPO/$LAYER_NAME:latest
+          docker push $REPO/$LAYER_NAME:latest
