--- a/.github/workflows/github-actions-dockerhub.yml
+++ b/.github/workflows/github-actions-dockerhub.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           images: pbc6835/docker-flask-todo
 
+      # Test + security scanning
+
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
